# opengl_rendering

./: CMakeLists.txt  README.md  main.cpp
cg/: camera.h  directions.h  light.h  material.h  mesh.h  shader.h  skybox.h  texture.h  window.h
cg/src/: camera.cpp  light.cpp  material.cpp  mesh.cpp  shader.cpp  skybox.cpp  texture.cpp  window.cpp
shaders/: main.frag  main.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
stb_image/: stb_image.h
